--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="about">
+			<div class="container">
+				<h2>About Us</h2>
+				<p>Divide have don't man wherein air fourth. Own itself make have night won't make. A you under Seed appear which good give. Own give air without fowl moveth dry first heaven fruit, dominion she'd won't very all.</p>
+				<img src="img/signature.png">
+			</div>
+		</section>
 	</main>
 
 
