added skills section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,34 @@
 				<img src="img/signature.png">
 			</div>
 		</section>
+
+		<section class="skills">
+			<div class="container">
+					<div class="skills-content">
+						<h2>Professional Skills</h2>
+						<div class="skill">
+							<h3>UI/UX Design    75%</h3>
+							<div class="loading">
+								<div class="loading-progress" id="loading-one"></div>
+							</div>
+						</div>
+						<div class="skill">
+							<h3>web development    90%</h3>
+							<div class="loading">
+								<div class="loading-progress" id="loading-two"></div>
+							</div>
+						</div>
+						<div class="skill">
+							<h3>marketing    65%</h3>
+							<div class="loading">
+								<div class="loading-progress" id="loading-three"></div>
+							</div>
+						</div>
+					</div>
+			</div>
+		</section>
+
+		
 	</main>
 
 
