added results section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,38 @@
 			</div>
 		</section>
 
-		
+		<section class="results">
+			<div class="container">
+				<div class="result">
+					<img src="img/result-1.png">
+					<div class="result-text">
+						<h4>548</h4>
+						<h4>projects completed</h4>
+					</div>
+				</div>
+				<div class="result">
+					<img src="img/result-1.png">
+					<div class="result-text">
+						<h4>1465</h4>
+						<h4>WORKING HOURS</h4>
+					</div>
+				</div>
+				<div class="result">
+					<img src="img/result-1.png">
+					<div class="result-text">
+						<h4>612</h4>
+						<h4>POSITIVE FEEDBACKS</h4>
+					</div>
+				</div>
+				<div class="result">
+					<img src="img/result-1.png">
+					<div class="result-text">
+						<h4>735</h4>
+						<h4>HAPPY CLIENTS</h4>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 
