added galery section. slickslider for less than 700px screen width

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>	
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Nunito+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -105,10 +106,27 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="galery">
+			<div class="container">
+				<div class="galery-holder">
+					<div class="galery-item"></div>
+					<div class="galery-item"></div>
+					<div class="galery-item"></div>
+					<div class="galery-item"></div>
+					<div class="galery-item"></div>
+					<div class="galery-item"></div>
+					<div class="galery-item"></div>
+					<div class="galery-item"></div>
+				</div>
+				<h3>load more work</h3>
+			</div>
+		</section>
 	</main>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
