added process section. some changes in about container. added buttons and header links interaction styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>	
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Nunito+Sans&display=swap" rel="stylesheet">
 </head>
@@ -14,13 +15,13 @@
 			<img src="img/logo.png">
 			<div class="menu">	
 				<nav>
-					<div class="nav-item">Home</div>
-					<div class="nav-item">About</div>
-					<div class="nav-item">Work</div>
-					<div class="nav-item">Process</div>
-					<div class="nav-item">Services</div>
-					<div class="nav-item">Testimonials</div>
-					<div class="nav-item">Contact</div>
+					<a class="nav-item" href="#">Home</a>
+					<a class="nav-item" href="#">About</a>
+					<a class="nav-item" href="#">Work</a>
+					<a class="nav-item" href="#">Process</a>
+					<a class="nav-item" href="#">Services</a>
+					<a class="nav-item" href="#">Testimonials</a>
+					<a class="nav-item" href="#">Contact</a>
 				</nav>
 				<div class="burger-btn">
 					<span></span>
@@ -35,7 +36,7 @@
 				<div class="text-container">
 					<h1>We Design and Develop</h1>	
 					<p>We are a new design studio based in USA. We have over 20 years of combined experience, and know a thing or two about designing websites and mobile apps.</p>
-					<a class="button">Contact us</a>
+					<a class="button" href="#">Contact us</a>
 				</div>
 			</div>
 		</section>
@@ -119,7 +120,21 @@
 					<div class="galery-item"></div>
 					<div class="galery-item"></div>
 				</div>
-				<h3>load more work</h3>
+				<a class="galery-load-more-btn">load more work</a>
+			</div>
+		</section>
+
+		<section class="about">
+			<div class="container process">
+				<h2>Our Work Process</h2>
+				<p>Was years it seasons was there form he in in them together over that, third sixth gathered female creeping bearing behold years.</p>
+				<iframe class="process-video" src="https://www.youtube.com/embed/jkaoTrQkeUQ"></iframe>
+				<div class="process-video video-controlls">
+					<div class="play-button button">
+						<img src="img/play-arrow.png">
+					</div>
+				</div>
+				
 			</div>
 		</section>
 	</main>
