--- a/index.html
+++ b/index.html
@@ -137,6 +137,67 @@
 				
 			</div>
 		</section>
+
+		<section class="products">
+			<div class="container">
+				<div class="product">
+					<div class="product-content">
+						<img src="img/product-1.png">
+						<h3>ui / ux design</h3>
+						<p>Be set fourth land god darkness make it wherein own</p>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product-content">
+						<img src="img/product-2.png">
+						<h3>web development</h3>
+						<p>A she'd them bring void moving third she'd kind fill</p>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product-content">
+						<img src="img/product-3.png">
+						<h3>app / mobile</h3>
+						<p>Dominion man second spirit he, earth they're creeping</p>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product-content">
+						<img src="img/product-4.png">
+						<h3>game design</h3>
+						<p>Morning his saying moveth it multiply appear life be</p>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product-content">
+						<img src="img/product-5.png">
+						<h3>SEO / marketing</h3>
+						<p>Give won't after land fill creeping meat you, may</p>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product-content">
+						<img src="img/product-6.png">
+						<h3>photography</h3>
+						<p>Creepeth one seas cattle grass give moving saw give</p>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product-content">
+						<img src="img/product-7.png">
+						<h3>graphic design</h3>
+						<p>Open, great whales air rule for, fourth life whales</p>
+					</div>
+				</div>
+				<div class="product">
+					<div class="product-content">
+						<img src="img/product-8.png">
+						<h3>illustrations</h3>
+						<p>Whales likeness hath, man kind for them air two won't</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 
