--- a/index.html
+++ b/index.html
@@ -198,6 +198,28 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="quote">
+			<div class="container">
+				<div class="slick-quote">
+					<div class="quote-item">
+						<h2>“Outstanding job and exceeded all expectations. It was a pleasure to work with them on a sizable first project and am looking forward to start the next one asap.”</h2>
+						<h3>Michael Hopkins</h3>
+					</div>
+					<div class="quote-item">
+						<h2>“Outstanding job and exceeded all expectations. It was a pleasure to work with them on a sizable first project and am looking forward to start the next one asap.”</h2>
+						<h3>Michael Hopkins</h3>
+					</div>
+					<div class="quote-item">
+						<h2>“Outstanding job and exceeded all expectations. It was a pleasure to work with them on a sizable first project and am looking forward to start the next one asap.”</h2>
+						<h3>Michael Hopkins</h3>
+					</div>
+				</div>
+				<!-- <div class="quote-dot">1</div>
+				<div class="quote-dot">2</div>
+				<div class="quote-dot">3</div> -->
+			</div>
+		</section>
 	</main>
 
 
