clients section added

--- a/index.html
+++ b/index.html
@@ -220,6 +220,16 @@
 				<div class="quote-dot">3</div> -->
 			</div>
 		</section>
+
+		<section class="clients">
+			<div class="container clients-holder">
+				<img src="img/client-1.png">
+				<img src="img/client-2.png">
+				<img src="img/client-3.png">
+				<img src="img/client-4.png">
+				<img src="img/client-5.png">
+			</div>
+		</section>
 	</main>
 
 
