--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>	
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Nunito+Sans&display=swap" rel="stylesheet">
 </head>
@@ -242,10 +241,40 @@
 					<textarea type="text" name="comment" class="cell comment" placeholder="Yor Comment"></textarea>
 					<a type="submit" value="Send Message" class="act button centro">Send message</a>
 				</form>
-
 			</div>
 		</section>
 	</main>
+
+	<footer>
+		<div class="container">
+			<div class="footer-content-box rights">
+				<h2>Piroll Design, Inc.</h2>
+				<p>© 2017 Piroll. All rights reserved.<br>Designed by robirurk.</p>
+			</div>
+			<div class="footer-content-box contacts">
+				<a href="#">hello@pirolltheme.com</a>
+				<a href="#">+44 987 065 908</a>
+			</div>
+			<div class="footer-content-box footer-nav">
+				<a href="#">Projects</a>
+				<a href="#">About</a>
+				<a href="#">Services</a>
+				<a href="#">Carreer</a>
+			</div>
+			<div class="footer-content-box footer-nav">
+				<a href="#">News</a>
+				<a href="#">Events</a>
+				<a href="#">Contact</a>
+				<a href="#">Legals</a>
+			</div>
+			<div class="footer-content-box links">
+				<a href="#">Facebook</a>
+				<a href="#">Twitter</a>
+				<a href="#">Instagram</a>
+				<a href="#">Dribbble</a>
+			</div>
+		</div>
+	</footer>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
